Replace deprecated float constructor with Float.valueOf
Signed-off-by: Jakob Wenzel <jakobw@xilinx.com>